<resources>
    <string name="app_name">e-Learn Quiz</string>
    <string name="like">like</string>
    <string name="test">test</string>
    <string name="instruction">Click test, give your answer and submit:</string>
    <string name="sentences">Display the used sentence here!</string>
    <string name="answershere">Display the right answer here!</string>
    <string name="thefor">for</string>
    <string name="since">since</string>
    <string name="that">that</string>
    <string name="thise">this</string>
    <string name="used_to">used to</string>
    <string name="be_used">be Used</string>
    <string name="still">still</string>
    <string name="always">always</string>
    <string name="as">as</string>
    <string name="so">so</string>
    <string name="such">such</string>
    <string name="labelname">This / that</string>
    <string name="labelso">So / Such</string>
    <string name="labelas">As / Like</string>
    <string name="labelstill">Still / Always</string>
    <string name="labeluseto">Use To / Be Used To</string>
    <string name="labelsecond">Suggestions</string>
    <string name="toastMessage">Ooooopps, you miss the right answer!</string>
    <string name="reset">reset</string>
    <string name="next">next</string>
    <string name="submit">Submit</string>
    <string name="yes">Yes</string>
    <string name="maybe">Maybe</string>
    <string name="no">No</string>
    <string name="back">Back</string>
    <string name="testbutton">Click on one test button please!</string>
    <string name="thanks">Thank you for trying, let\'s see the answer!</string>
</resources>
