<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.example.elhadji.e_learningquizz.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="@dimen/layouMargin"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/text_margin"
                android:layout_marginStart="@dimen/text_margin"
                android:layout_marginVertical="@dimen/text_margin"
                android:fontFamily="sans-serifMedium"
                android:text="@string/instruction"
                android:textAllCaps="true"
                android:textSize="@dimen/titleSize"
                android:textStyle="italic|bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/view_color" />

            <TextView
                android:id="@+id/sentence_text"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/text_margin"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_weight="1"
                android:fontFamily="sans-serifMedium"
                android:text="@string/sentences"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size"
                android:textStyle="bold|normal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/view_color" />

            <TextView
                android:id="@+id/result_text_view"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginBottom="@dimen/text_margin"
                android:layout_weight="1"
                android:fontFamily="sans-serifMedium"
                android:text="@string/answershere"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size"
                android:textStyle="bold|italic" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/view_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/linMargin"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/forcheckbox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/checkPading"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/checkPading"
                    android:text="@string/thefor"
                    android:textAllCaps="true"
                    android:textSize="@dimen/size" />

                <CheckBox
                    android:id="@+id/sincecheckbox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/checkPading"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/checkPading"
                    android:text="@string/since"
                    android:textAllCaps="true"
                    android:textSize="@dimen/size" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:onClick="testStartFor"
                    android:text="@string/test" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/view_color" />

            <TextView
                android:id="@+id/lesson_rule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:layout_marginVertical="@dimen/text_margin"
                android:fontFamily="sans-serifMedium"
                android:text=""
                android:textAllCaps="true"
                android:textSize="@dimen/titleSize"
                android:textStyle="italic|bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/but_margin">


            <Button
                android:id="@+id/submitButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="submitAnswers"
                android:text="Submit" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="resetBoxes"
                android:text="@string/reset" />


            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="goToSecondActivity"
                android:text="@string/next" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>




