<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.example.elhadji.e_learningquizz.ThisThatActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="45dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginVertical="4dp"
                android:fontFamily="sans-serifMedium"
                android:text="@string/instruction"
                android:textAllCaps="true"
                android:textSize="12dp"
                android:textStyle="italic|bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#9E9E9E" />

            <TextView
                android:id="@+id/sentence_text"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:fontFamily="sans-serifMedium"
                android:text="@string/sentences"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size"
                android:textStyle="bold|normal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/view_color" />

            <TextView
                android:id="@+id/result_text_view"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:fontFamily="sans-serifMedium"
                android:text="@string/answershere"
                android:textColor="@color/text_color"
                android:textSize="@dimen/text_size"
                android:textStyle="bold|italic" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/view_color" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp">

                <CheckBox
                    android:id="@+id/thatcheckbox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:layout_weight="1"
                    android:paddingLeft="4dp"
                    android:text="@string/that"
                    android:textAllCaps="true"
                    android:textSize="@dimen/size" />

                <CheckBox
                    android:id="@+id/thischeckbox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:layout_weight="1"
                    android:paddingLeft="4dp"
                    android:text="@string/thise"
                    android:textAllCaps="true"
                    android:textSize="@dimen/size" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:onClick="testStartThis"
                    android:text="@string/test" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/view_color" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/but_margin">


            <Button
                android:id="@+id/submitButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="submitAnswers"
                android:text="Submit" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="resetBoxes"
                android:text="reset" />


            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="goToSecondActivity"
                android:text="next" />

        </LinearLayout>

    </RelativeLayout>

</ScrollView>





